# rusty-rlp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml  python_tests.py  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: main.yml
src/: errors.rs  lib.rs
tests/: address.rs  binary.rs  core.rs  decode.rs  lists.rs  strings.rs
workflows/: all.yml  main.yml
