[package]
name = "rusty-rlp"
version = "0.1.0"
authors = ["Christoph Burgdorf <christoph.burgdorf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_rlp"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
ethereum-types = "0.7.0"
rlp = "0.4.5"
primitive-types = "0.7.2"
hex-literal = "0.3.0"
hex-slice = "0.1.4"
hex = "0.4.2"
bytes = "0.5.6"

[dev-dependencies]
rstest = "0.6.4"

