
[package]
name = "rusty-rlp"
version = "0.4.0"
authors = ["Christoph Burgdorf <christoph.burgdorf@gmail.com>"]
edition = "2018"
description = "Python RLP serialization/deserialization based on a rapid fast Rust implementation."
homepage = "https://github.com/cburgdorf/rusty-rlp"
repository = "https://github.com/cburgdorf/rusty-rlp"
readme = "README.md"
license = "MIT"

[lib]
name = "rusty_rlp"
crate-type = ["cdylib"]

[dependencies]

rlp = "0.4.5"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dev-dependencies]
ethereum-types = "0.9.2"
rstest = "0.6.4"
hex-literal = "0.3.0"
hex = "0.4.2"
bytes = "0.5.6"
