[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "rusty-rlp"
version = "0.3.0"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
